syntax = "proto3";

package douyin;

import "ReferencedMessageInfo.proto";

message SendMessageRequestBody {
  string conversation_id = 1;
  int32 conversation_type = 2;
  int64 conversation_short_id = 3;
  string content = 4;
  map<string, string> ext = 5;
  int32 message_type = 6;
  string ticket = 7;
  string client_message_id = 8;
  repeated int64 mentioned_users = 9;
  bool ignore_badge_count = 10;
  ReferencedMessageInfo ref_msg_info = 11;
}
